tests/ui/resolve/issue-22692.stderr
error[E0423]: expected value, found struct `String`
  --> $DIR/issue-22692.rs:2:13
   |
LL |     let _ = String.new();
   |             ^^^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found struct `String`
  --> $DIR/issue-22692.rs:6:13
   |
LL |     let _ = String.default;
   |             ^^^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:10:13
   |
LL |     let _ = Vec::<()>.with_capacity(1);
   |             ^^^^^^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:17:9
   |
LL | / macro_rules! Type {
LL | |     () => {
LL | |         ::std::cell::Cell
   | |         ^^^^^^^^^^^^^^^^^
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `Type!`
...
LL |       Type!().get();
   |       ------- in this macro invocation
   |
help: use the path separator to refer to an item
   |
LL |     <Type!()>::get();
   |     ~~~~~~~~~~~

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:17:9
   |
LL | / macro_rules! Type {
LL | |     () => {
LL | |         ::std::cell::Cell
   | |         ^^^^^^^^^^^^^^^^^
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `Type!`
...
LL |       Type! {}.get;
   |       -------- in this macro invocation
   |
help: use the path separator to refer to an item
   |
LL |     <Type! {}>::get;
   |     ~~~~~~~~~~~~

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:26:9
   |
LL | / macro_rules! create {
LL | |     (type method) => {
LL | |         Vec.new()
   | |         ^^^- help: use the path separator to refer to an item: `::`
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `create!`
...
LL |       let _ = create!(type method);
   |               -------------------- in this macro invocation

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:31:9
   |
LL | / macro_rules! create {
LL | |     (type method) => {
LL | |         Vec.new()
LL | |
...  |
LL | |         Vec.new
   | |         ^^^- help: use the path separator to refer to an item: `::`
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `create!`
...
LL |       let _ = create!(type field);
   |               ------------------- in this macro invocation

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:17:9
   |
LL | / macro_rules! Type {
LL | |     () => {
LL | |         ::std::cell::Cell
   | |         ^^^^^^^^^^^^^^^^^
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `Type!` (#2)
LL |
LL | / macro_rules! create {
LL | |     (type method) => {
LL | |         Vec.new()
LL | |
...  |
LL | |         Type!().new(0)
   | |         ------- in this macro invocation (#2)
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `create!` (#1)
...
LL |       let _ = create!(macro method);
   |               --------------------- in this macro invocation (#1)
   |
help: use the path separator to refer to an item
   |
LL |         <Type!()>::new(0)
   |         ~~~~~~~~~~~

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0423`.
